# c-plus-utils

./: LICENSE
src/utils/: CMakeLists.txt
src/utils/include/utils/: app_settings.h  date_time.h  file_system.h  logger.h  macro.h  numbers.h
src/utils/include/utils/containers/: converters.h  map.h  message_queue.h  queue.h  set.h  string.h  vector.h
src/utils/include/utils/network/: socket.h  socket_client.h  socket_server.h  tcp_socket_client.h  tcp_socket_server.h
src/utils/include/utils/nodes/: observer.h
src/utils/include/utils/pointers/: shared_prt.h  unique_ptr.h
src/utils/include/utils/structures/: matrix2.h  matrix3.h  position.h
src/utils/include/utils/threads/: thread.h  thread_runnable.h
src/utils/include/utils/threads/synchronization/: atomic.h  auto_lock.h  barrier.h  conditional_variable.h  lock.h
src/utils/src/: app_settings.cc  date_time.cc  file_system.cc  logger.cc
src/utils/src/containers/: converters.cc  string.cc
src/utils/src/network/: tcp_socket_client_boost.cc  tcp_socket_server_boost.cc
src/utils/src/structures/: matrix2.cc  matrix3.cc
src/utils/src/threads/: thread.cc
src/utils/src/threads/synchronization/: auto_lock.cc  barrier.cc  conditional_variable.cc  lock.cc
src/utils/unit_tests/include/utils/: async_waiter.h  mock_socket.h
